<resources>
    <string name="app_name">Am Thuc Viet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--error message-->
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="connect_timeout">Connect Timeout</string>
    <string name="force_update_app">Please update app</string>
    <string name="server_maintain_message">Server maintain, please try again later</string>

    <string name="ok">OK</string>
    <string name="summary">Summary</string>

    <string name="title_favorite">Yêu thích</string>
    <string name="title_search">Tìm kiếm</string>
    <string name="title_rate_me">Ủng hộ tôi</string>
    <string name="title_feedback">Góp ý</string>
    <string name="title_categories">Danh mục</string>
    <string name="title_recipes">recipes</string>
    <string name="title_toolbar_categories">Danh mục</string>
    <string name="hint_search">Nhập tên món ăn</string>
</resources>
