<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.amthuc.congthuc.ui.screen.main.MainViewModel" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                android:visibility="@{viewModel.isShowToolbar ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <fragment
                android:id="@+id/nav_host_fragment"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:defaultNavHost="true"
                app:layout_constraintBottom_toTopOf="@+id/linear_ads"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:navGraph="@navigation/navigation" />

            <LinearLayout
                android:id="@+id/linear_ads"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="@dimen/dp_280"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/color_gray_200">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/layout_menu_nav_bottom"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_160"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/drawer" />

                <LinearLayout
                    android:id="@+id/nav_favorite"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:contentDescription="@string/app_name"
                        android:padding="@dimen/dp_8"
                        android:src="@drawable/ic_favorite_black_24dp"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        style="@style/drawerTextStyle"
                        android:text="@string/title_favorite" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_search"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:contentDescription="@string/app_name"
                        android:padding="@dimen/dp_8"
                        android:src="@drawable/ic_search_black_24dp"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        style="@style/drawerTextStyle"
                        android:text="@string/title_search" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/color_gray_400" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_8"
                    android:text="@string/title_categories"
                    android:textAllCaps="true"
                    android:textSize="@dimen/sp_16" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_category_drawer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_menu_nav_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/color_gray_400" />

                <LinearLayout
                    android:id="@+id/nav_rate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:contentDescription="@string/app_name"
                        android:padding="@dimen/dp_8"
                        android:src="@drawable/ic_thumb_up_black_24dp"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        style="@style/drawerTextStyle"
                        android:text="@string/title_rate_me" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_report_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:contentDescription="@string/app_name"
                        android:padding="@dimen/dp_8"
                        android:src="@drawable/ic_feedback_black_24dp"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        style="@style/drawerTextStyle"
                        android:text="@string/title_feedback" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.drawerlayout.widget.DrawerLayout>
</layout>
